<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">أسواق</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_email">البريد الإلكتروني</string>
    <string name="lbl_password">كلمة المرور</string>
    <string name="lbl_password_repeat">تاكيد كلمة المرور</string>
    
    <string name="btn_doesnt_have_account">لا تملك حساباً ؟</string>
    <string name="lbl_mobile_number">رقم الموبايل</string>
    <string name="lbl_address">العنوان</string>
    <string name="lbl_description">شرح عن خدمتك</string>
    <string name="error_mobile_number_empty">أدخل رقم الموبايل</string>
    <string name="lbl_user_name">الاسم</string>
    <string name="btn_add_advertise">أضف إعلان</string>
    <string name="hint_txt_product_description">وصف بسيط عما تنشره</string>

    <!-- Generic strings-->
    <string name="place_holder">-------</string>
    
    <!-- login -->
    <string name="login_hint_email">البريد الإلكتروني</string>
    <string name="login_hint_psw">كلمة السر</string>
    <string name="login_error_email_invalid">البريد الإلكتروني غير صحيح</string>
    <string name="login_error_password_length">كلمة المرور يجب أن تكون أكثر من 4 محارف</string>
    <string name="login_error_email_empty">يرجى ادخال البريد الإلكتروني</string>
    <string name="login_error_password_empty">يرجى إدخال كلمة المرور</string>
    <string name="login_error_user_name_empty">يرجى إدخال الاسم</string>
    <string name="login_error_email_or_password_wrong">خطأ في البريد الالكتروني او كلمة المرور</string>
    <string name="login_error_connection_failed">حدث خطأ في عملية الاتصال</string>
    <string name="login_error_user_exists_before">إن رقم الموبايل الذي أدخلته مسجل من قبل</string>
    <string name="login_btn_login">تسجيل الدخول أو الاشتراك</string>
    <string name="login_btn_login_fb">دخول عن طريق الفيسبوك</string>
    <string name="login_btnRegister">تسجيل</string>
    <string name="login_lbl_or">أو</string>
    <string name="error_short_phone_num">رقم الهاتف غير صحيح .... الرجاء إدخال الرقم بالصيغة الدولية</string>
    <string name="error_incorrect_phone_num">رقم الهاتف غير صحيح ....</string>
    
    <!-- verif -->
    <string name="verif_lbl_verification_text">ستصلك رسالة SMS خلال دقائق معدودة تحتوي رمز التفعيل</string>
    <string name="verif_hint_verification_code">رمز التأكيد</string>
    <string name="verif_btn_verifiy_code">تأكيد</string>
    <string name="verif_error_verification_message_wrong">رمز التفعيل خطأ</string>
    
    <!-- main -->
    <string name="main_search_hint">قم بالبحث عن ما تحتاجه</string>
    
    <!-- add Adv -->
    <string name="add_ad_price_hint">السعر؟</string>
    <string name="add_ad_cat_hint">نوع المنتج؟</string>
    <string name="add_ad_phone_hint">اضافة رقم جديد</string>
    <string name="add_ad_new">جديد</string>
    <string name="add_ad_used">مستعمل</string>
    <string name="add_ad_add_ur_fb_page">اضافة صفحتك على الفيسبوك</string>
    <string name="add_ad_send">إضافة الإعلان</string>
    <string name="error_description_required">مطلوب شرح عن المنتج</string>
    <string name="error_price_required">السعر مطلوب</string>
    <string name="error_phone_required">رقم الهاتف مطلوب</string>
    <string name="message_fb_not_installed">مكتبة الفيس بوك غير منصبة</string>
    <string name="error_operation_failed">خطأ في العملية</string>
    <string name="sharing_failed">خطأ في المشاركة</string>
    <string name="trial_version">نسخة تجريبية</string>
    <string name="btn_resend_verification_code">إعادة إرسال رمز التفعيل</string>
    <string name="toast_verification_sent">تم إرسال رمز التفعيل بنجاح</string>
    <string name="drawer_feedback">فييد باك</string>
    <string name="drawer_logout">تسجيل خروج</string>
    <string name="drawer_share">شير</string>
    <string name="drawer_main">الرئيسية</string>
    <string name="drawer_profile">صفحتي الشخصية</string>
    <string name="drawer_agents">قائمة المتابعين</string>
    <string name="drawer_callus">اتصل بنا</string>
    <string name="drawer_favourites">المفضلة</string>
    <string name="hint_password_repeat">تأكيد كلمة المرور</string>
    <string name="error_password_not_same">كلمتي المرور غير متطابقتين</string>
    <string name="error_connection_error">حدث خطأ في الاتصال تأكد من عمل الانترنت</string>
    <string name="lbl_suitable_category">اختر الصنف المناسب لإعلانك</string>
    <string name="error_chose_suitable_category">اختر الصنف المناسب لإعلانك</string>
    <string name="error_verification_code_required">رمز التفعيل مطلوب</string>
    
    <!-- Details -->
    <string name="details_payed">إعلان مدفوع</string>
    <string name="details_call">اتصال</string>
    <string name="details_place">المكان</string>
    <string name="details_category">القسم</string>
    <string name="details_desc">الوصف</string>
    <string name="app_id">974683922588212</string>
    
    <!-- search -->
    <string name="search_place_holder">بمكنك البحث عن اشخاص أو منتجات</string>
    <string name="search_hint">ادخل كلمة مفتاحية</string>
    <string name="search_no_results">لا يوجد نتائج لعرضها</string>
    <string name="search_tab_title_users">مستخدمون</string>
    <string name="search_tab_title_ads">اعلانات</string>
    
    <!-- user list -->
    <string name="user_list_follow">متابعة</string>
    <string name="user_list_unfollow">الغاء المتابعة</string>
    
    <!-- user profile -->
    <string name="profile_desc">الوصف</string>
    <string name="profile_ads">الاعلانات</string>
    <string name="lbl_price_unit">ل.س</string>
    <string name="xx">xx</string>
    <string name="login_btnEditUserProfile">حفظ التعديلات</string>
    <string name="actionbar_edit_user_profile">تعديل صفحتي الشخصية</string>
    <string name="error_facebook_exception">حدث خطأ أثناء عملية التسجيل في فيس بوك</string>
    <string name="error_facebook_permissions_rejected">لايمكن تسجيل الدخول عبر فيس بوك دون موافقتك إعطائنا الصلاحيات المطلوبة</string>
    <string name="toast_ad_has_been_added">تم إضافة الإعلان بنجاح وسيتم نشره فور الموافقة عليه</string>
    <string name="error_verification_attempts_exceeded">لقد تجاوزت عدد مرات طلب رمز التفعيل</string>
    <string name="error_photo_required">يجب عليك تحديد صورة واحد على الأقل للإعلان</string>
    <string name="lbl_rate_user">تقييم المستخدم</string>
    <string name="lbl_choose_rate">اختر التقييم التي تراه مناسباً :</string>
    
    <string name="diag_rating_ok">موافق</string>
    <string name="lbl_ad_details">تفاصيل الإعلان</string>
    
    <!-- diag pick foto from -->
    <string name="pick_photo_gallery">اختيار صورة من الملفات</string>
    <string name="pick_photo_cam">التقاط صورة</string>
    <string name="pick_photo_cancel">إلغاء الأمر</string>
    <string name="error_server_error">هناك خطأ في المخدم</string>
    <string name="diag_confirm_btn_yes">موافق</string>
    <string name="diag_confirm_btn_cancel">إلغاء</string>
    <string name="advertise_details_btn_facebook_share">مشاركة على فيس بوك</string>
    
    <!-- about -->
    <string name="frag_about_number">099999998</string>
    <string name="frag_about_fb_page">/aswaq-app</string>
    <string name="user_page_activity_lbl_follower">متابع</string>
    <string name="advertise_details_lbl_used">مستعمل</string>
    <string name="advertise_details_lbl_new">جديد</string>
    <string name="diag_facebook_page_lbl_link">ضع رابط صفحتك على فيس بوك</string>
    <string name="diag_facebook_page_ok">موافق</string>
    <string name="facebook_page_link_prefix">https://www.facebook.com/</string>
    <string name="user_profile_change_photo">غير صورتك الشخصية</string>
    <string name="user_profile_lbl_image_size">يفضل أن تكون الصورة بقياس 300*300</string>
    <string name="diag_change_password_lbl_email">اكتب بريدك الإلكتروني :</string>
    <string name="diag_change_password_send_request">إرسال طلب تغيير كلمة المرور</string>
    <string name="diag_change_password_sending_success">تم إرسال الطلب إلى بريدك الإلكتروني</string>
    <string name="btn_forget_password">نسيت كلمة المرور ؟</string>
    <string name="frag_about_developed_by">Developed By :</string>
    <string name="error_mobile_number_short">رقم الموبايل أقصر من المتوقع</string>
    <string name="error_mobile_number_wrong">صيغة رقم الموبايل المدخل غير صحيحة</string>
    <string name="frag_add_ad_error_upload_photos">حدث خطأ أثناء رفع صور الإعلان</string>
    <string name="lbl_update_version">هناك نسخة أحدث من تطبيق أسواق, قم بتحميلها الآن</string>
    <string name="diag_btn_download">تحميل</string>
    <string name="diag_btn_cancel">لاحقاً</string>
    
</resources>
