<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verif_lbl_verification_text"/>
    
    <EditText 
        android:id="@+id/txtVerificationCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/verif_hint_verification_code"/>
    
   <Button 
       android:id="@+id/btnVerifyCode"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/verif_btn_verifiy_code"/>
    
</LinearLayout>
