<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <com.brainSocket.aswaq.views.TextViewCustomFont 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diag_change_password_lbl_email"
        android:textSize="@dimen/ts_text_normal"
        android:textColor="@color/txt_dark" 
        android:layout_margin="10dp" />
    
    <com.brainSocket.aswaq.views.EditTextCustomFont 
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_email"/>
    
    <com.brainSocket.aswaq.views.TextViewCustomFont
        android:id="@+id/btnSendChangePasswordRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="@drawable/selector_btn_app_theme"
        android:gravity="center"
        android:padding="8dp"
        android:layout_margin="10dp"
        android:text="@string/diag_change_password_send_request"
        android:textColor="@color/white"
        android:textSize="@dimen/ts_text_big" />

</LinearLayout>
