<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dlDrawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
<ScrollView 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/logo_splash" />

        <com.brainSocket.views.TextViewCustomFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/lbl_user_name"
            app:fontId="1" />

        <EditText
            android:id="@+id/txtUserNameRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <com.brainSocket.views.TextViewCustomFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/lbl_mobile_number"
            app:fontId="1" />

        <EditText
            android:id="@+id/txtMobileNumberRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="phone" />


        <com.brainSocket.views.TextViewCustomFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/lbl_address"
            app:fontId="1" />

        <EditText
            android:id="@+id/txtAddressRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <com.brainSocket.views.TextViewCustomFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/lbl_description"
            app:fontId="1" />

        <EditText
            android:id="@+id/txtDescriptionRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <com.brainSocket.views.TextViewCustomFont
            android:id="@+id/btnEditUserProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/selector_btn_app_theme"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/login_btnEditUserProfile"
            android:textColor="@color/white"
            android:textSize="@dimen/ts_text_normal"
            app:fontId="1" />

    </LinearLayout>
<!-- dd -->
</ScrollView>

<include
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        layout="@layout/drawer" />
</android.support.v4.widget.DrawerLayout>