<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llheader"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_header_height"
        android:layout_gravity="center_horizontal"
        android:background="@color/app_theme" >

        <com.brainSocket.aswaq.views.RoundedImageView
            android:id="@+id/ivUser"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_rounded_photo_frame"
            android:padding="2dp"
            android:scaleType="centerCrop"
            app:corner_radius="5dp" />

        <com.brainSocket.aswaq.views.TextViewCustomFont
            android:id="@+id/tvUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivUser"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/place_holder"
            android:textColor="@color/txt_white"
            android:textSize="@dimen/ts_title_big"
            android:textStyle="bold"
            app:fontId="1" />

        <com.brainSocket.aswaq.views.TextViewCustomFont
            android:id="@+id/tvFollowers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvUserName"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/place_holder"
            android:textColor="@color/txt_white"
            android:textSize="@dimen/ts_text_big"
            app:fontId="1" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_theme"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="6dp" >

        <ImageView
            android:id="@+id/btnFbPage"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:background="@color/app_theme_light"
            android:padding="6dp"
            android:src="@drawable/ic_face" />

        <LinearLayout
            android:id="@+id/llUserRating"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/app_theme_light"
            android:gravity="center"
            android:orientation="vertical" >

            <com.brainSocket.aswaq.views.TextViewCustomFont
                android:id="@+id/tvUserRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/place_holder"
                android:textColor="@color/txt_white"
                android:textSize="@dimen/ts_text_normal"
                app:fontId="1" />

            <RatingBar
                android:id="@+id/rbUserRate"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:gravity="center"
                android:numStars="5"
                android:stepSize="1" />
        </LinearLayout>

        <com.brainSocket.aswaq.views.TextViewCustomFont
            android:id="@+id/tvFollow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:background="@color/app_theme_light"
            android:drawableTop="@drawable/ic_follow_big"
            android:gravity="center|center_vertical"
            android:padding="4dp"
            android:text="@string/user_list_follow"
            android:textColor="@color/txt_white"
            android:textSize="@dimen/ts_text_small"
            app:fontId="1" />
    </LinearLayout>

    <com.brainSocket.aswaq.views.TextViewCustomFont
        android:id="@+id/txtDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:padding="8dp"
        android:text="@string/details_desc"
        android:textColor="@color/txt_normal"
        android:textSize="@dimen/ts_text_big"
        android:textStyle="bold"
        app:fontId="1" />

    <!-- <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="80dp"
        android:background="@color/app_theme" />-->

    <com.brainSocket.aswaq.views.TextViewCustomFont
        android:id="@+id/tvDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:padding="8dp"
        android:text="@string/place_holder"
        android:textColor="@color/txt_normal"
        android:textSize="@dimen/ts_text_normal"
        app:fontId="1" />

    <com.brainSocket.aswaq.views.TextViewCustomFont
        android:id="@+id/txtAds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="right"
        android:padding="8dp"
        android:text="@string/profile_ads"
        android:textColor="@color/txt_normal"
        android:textSize="@dimen/ts_text_big"
        android:textStyle="bold"
        app:fontId="1" />

    <!-- <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="80dp"
        android:background="@color/app_theme" />-->

</LinearLayout>